--- a/assets/css/privacyPolitics.css
+++ b/assets/css/privacyPolitics.css
@@ -6,20 +6,31 @@ html, body{
 .boxText{
     width: 60%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 60%);
+    background-color: rgba(0, 0, 0, 75%);
     color: white;
 
     padding: 2rem 5rem;
 }
 
 .boxTextTitle{
-    border-bottom: 0.2rem solid rgb(200, 0, 0);
+    border-bottom: 0.2rem solid rgb(200, 30, 30);
     padding-bottom: 1rem;
     margin-bottom: 1rem;
 
     font-family: 'Raleway-Black';
     font-size: 2.8rem;
-    color: rgb(200, 0, 0);
+    color: rgb(200, 30, 30);
+    text-align: left;
+}
+
+.boxTextSubtitle{
+    border-bottom: 0.1rem solid white;
+    padding: 1rem 0 0.5rem 0;
+    margin-bottom: 0.5rem;
+
+    font-family: 'Raleway-Black';
+    font-size: 1.4rem;
+    text-align: left;
 }
 
 .boxTextBody{
@@ -65,5 +76,13 @@ html, body{
 
     .btnReturn:hover{
         width: 2.6rem;
+    }
+
+    .boxTextTitle{
+        font-size: 2.0rem;
+    }
+    
+    .boxTextSubtitle{
+        font-size: 1.2rem;
     }
 }
