--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -15,6 +15,29 @@
     gap: 1rem;
 }
 
+#loginWarnings{
+    width: 100%;
+
+    display: none;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.loginError{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 1rem;
+    font-family: 'Raleway-Black';
+    color: white;
+    text-align: left;
+}
+
+.loginError .loginIcon{
+    margin-right: 1rem;
+}
+
 .loginTitle{
     font-family: 'Raleway-Black';
     font-size: 1.8rem;
@@ -47,7 +70,7 @@
     border: 0.2rem solid rgb(250, 0, 0);
 }
 
-.loginMarginTxt .loginIcon{
+.loginIcon{
     height: 1.8rem;
     margin-right: 3%;
     user-select: none;
@@ -89,6 +112,7 @@
     font-size: 0.9rem;
     color: white;
     text-decoration: none;
+    user-select: none;
 }
 
 .loginBoxLink:hover{
